--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -42,6 +42,12 @@
     ]
   },
   "devDependencies": {
-    "sass": "^1.52.1"
+
+    "sass": "^1.52.1",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "@vitejs/plugin-react": "^1.3.0",
+    "typescript": "^4.6.3",
+    "vite": "^2.9.9"
   }
 }
